<resources>
    <string name="app_name">EveryLife</string>
    <string name="medication">medication</string>
    <string name="hydration">Hydration</string>
    <string name="nutrition">Nutrition</string>
    <string name="general">General</string>
    <string name="no_data_available_or_no_filter_applied">No data available or no filter applied.</string>
    <string name="back_to_online">Back to online.</string>
    <string name="offline">Offline</string>
</resources>